--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control - Home</title>
+    <script defer src="/postHog.js"></script>
+    <script defer src="/pages/home/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&amp;family=Poppins:wght@300;400;500;600;700&amp;display=swap"
