--- a/server/pages/admin/index.html
+++ b/server/pages/admin/index.html
@@ -7,6 +7,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/ace-builds@1.12.5/src/ace.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/ace-builds@1.12.5/src/theme-monokai.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/ace-builds@1.12.5/src/mode-html.min.js"></script>
+    <script defer src="/pages/admin/script.js"></script>
+    <link rel="icon" href="/assets/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" />
     <style>
