--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -19,9 +19,8 @@
         background-color: #f9f9f9;
       }
 
-      a {
-        text-decoration: none;
-        color: inherit;
+      .downloadButton:hover {
+        background-color: #0036cc !important;
       }
 
       h1, h2, h3 {
@@ -248,7 +247,7 @@
         Docs
       </a>
       <a
-        href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+        class="downloadButton"
         style="
           position: absolute;
           left: calc(100vw - 220px);
@@ -264,7 +263,9 @@
           padding-bottom: 13px;
           padding-left: 18.5px;
           padding-right: 19.5px;
+          transition: background-color 0.3s;
         "
+        href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
       >
         Download
       </a>
