--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -20,6 +20,10 @@
         color: #333;
         background-color: #f7f8fa;
       }
+
+      .downloadButton:hover {
+        background-color: #0036cc !important;
+      }
       
       h1 {
         font-size: 45px;
@@ -179,7 +183,7 @@
         Docs
       </a>
       <a
-        href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+        class="downloadButton"
         style="
           position: absolute;
           left: calc(100vw - 220px);
@@ -195,7 +199,9 @@
           padding-bottom: 13px;
           padding-left: 18.5px;
           padding-right: 19.5px;
+          transition: background-color 0.3s;
         "
+        href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
       >
         Download
       </a>
