--- a/server/pages/admin/index.html
+++ b/server/pages/admin/index.html
@@ -97,12 +97,6 @@
         resize: vertical;
       }
 
-      .card input {
-        font-family: inherit;
-        padding: 10px 12.5px 12.5px;
-        line-height: 17px;
-      }
-
       .card input, .card textarea {
         width: calc(100% - 27.5px);
       }
@@ -117,6 +111,36 @@
         width: 100%;
         font-size: 15px;
         padding: 11px;
+      }
+
+      .card textarea {
+        font-family: inherit;
+        padding: 10px 12.5px 12.5px;
+        margin-bottom: 15px;
+        line-height: 17px;
+      }
+
+      .card .editor {
+        width: 100%;
+        height: 250px;
+        margin-bottom: 15px;
+        border-radius: 4px;
+        margin: 7.5px 0px;
+        resize: vertical;
+      }
+
+      .ace_scrollbar::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+      }
+
+      .ace_scrollbar::-webkit-scrollbar-thumb {
+        background-color: #888;
+        border-radius: 5px;
+      }
+
+      .ace_scrollbar::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
       }
 
       .card button {
@@ -166,14 +190,6 @@
 
       .buttonLink:hover {
         background-color: #023ac3;
-      }
-
-      .editor {
-        width: 100%;
-        height: 250px;
-        border-radius: 4px;
-        margin: 7.5px 0px;
-        resize: vertical;
       }
 
       @media (max-width: 768px) {
@@ -257,7 +273,6 @@
               <label id="newsletterContentLabel" for="newsletterContentInput">Post Content</label>
               <textarea
                 id="newsletterContentInput"
-                style="height: 250px;"
                 rows="8"
                 required
               ></textarea>
