--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -19,6 +19,11 @@
         background-color: #f9f9f9;
       }
 
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+
       .downloadButton:hover {
         background-color: #0036cc !important;
       }
