--- a/server/pages/admin/index.html
+++ b/server/pages/admin/index.html
@@ -226,7 +226,7 @@
         width: 80%;
       "
     >
-      <div class="card">
+      <div class="card" style="padding: 30px;">
         <h2>Admin Portal Login</h2>
         <form id="adminLoginForm" method="POST" action="/api/v1/admin/login" style="margin-bottom: -15px;">
           <label for="adminPasswordInput">Admin Password</label>
