Bug fix; Changed npm package version

--- a/server/pages/admin/index.html
+++ b/server/pages/admin/index.html
@@ -286,6 +286,7 @@
                 <button type="submit">Send Newsletter</button>
               </form>
             </div>
+          </div>
         </div>
         <div id="contacts" style="display: none">
           <h1>Contact Messages</h1>
