Added auto launch type; Added bin scripts; Changed npm package version

--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -204,7 +204,19 @@
               margin-bottom: 0;
             "
           >
-            Auto Launch
+            Auto Launch in <select
+              id="autoLaunchSelect"
+              style="
+                font-size: 15px;
+                font-weight: 600;
+                font-family: system-ui;
+                margin-left: -3.75px;
+                border: none;
+              "
+            >
+              <option>foreground</option>
+              <option>background</option>
+            </select>
           </h4>
           <p
             style="
