Added alt tags; Changed npm package version

--- a/server/pages/openSource/index.html
+++ b/server/pages/openSource/index.html
@@ -105,6 +105,7 @@
       <a href="/" style="position: absolute">
         <img
           src="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/main/docs/static/logo.svg"
+          alt="Logo"
           style="width: 300px; margin-top: -13px; margin-left: 60px"
         />
       </a>
