--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -246,6 +246,52 @@
       ></div>
       <div style="display: flex; flex-direction: row; margin-left: 42.5px">
         <i
+          class="fa fa-eye-slash"
+          aria-hidden="true"
+          style="
+            height: 100%;
+            font-size: 22px;
+            margin-top: 3.5px;
+            margin-right: 12.5px;
+          "
+        ></i>
+        <div style="display: flex; flex-direction: column">
+          <h4 style="
+              font-size: 15px;
+              font-weight: 600;
+              font-family: system-ui;
+              margin-top: 0;
+              margin-bottom: 0;
+            "
+          >
+            Run in background when closed
+          </h4>
+          <p style="
+            font-size: 13.25px;
+            font-family: system-ui;
+            margin-top: 0.25px;
+          ">
+            Keep Remote Control running in the background for uninterrupted access
+          </p>
+        </div>
+        <label class="switch" data-type="runInBackgroundOnClose">
+          <input type="checkbox">
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div
+        style="
+          width: calc(100% - 50px);
+          height: 1px;
+          background-color: #bfbfbf78;
+          margin-top: 2.5px;
+          margin-bottom: 10.5px;
+          margin-left: 25px;
+          opacity: 0.75;
+        "
+      ></div>
+      <div style="display: flex; flex-direction: row; margin-left: 42.5px">
+        <i
           class="fa fa-wrench"
           aria-hidden="true"
           style="
@@ -344,7 +390,7 @@
       ></div>
       <div style="display: flex; flex-direction: row; margin-left: 42.5px">
         <i
-          class="fa fa-sliders"
+          class="fa fa-bug"
           aria-hidden="true"
           style="
             height: 100%;
