Fixed homepage link; Changed npm package version

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -286,7 +286,7 @@
         Download App
       </a>
       <a
-        href="/self-hosting"
+        href="https://npmjs.com/package/electron-remote-control"
         class="secondaryButton"
       >
         Self Hosting
