Added meta description tags; Updated Express Docs; Cleared out grammatical mistakes and spelling errors; Changed npm package version

--- a/server/pages/help/index.html
+++ b/server/pages/help/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Need help with Remote Control? Find answers to FAQs, troubleshooting tips, and support for seamless use of our cross-platform remote desktop solution." />
   <title>Remote Control - Help</title>
   <script defer src="/postHog.js"></script>
   <script defer src="/pages/help/script.js"></script>
