--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="An advanced but easy-to-use remote desktop application with cross-platform support. Access and manage devices securely from anywhere." />
     <title>Remote Control - Home</title>
     <script defer src="/postHog.js"></script>
     <script defer src="/pages/home/script.js"></script>
