--- a/server/pages/openSource/index.html
+++ b/server/pages/openSource/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explore the open-source foundation of Remote Control, a cross-platform remote desktop app. Learn how transparency drives our secure, community-driven innovation." />
     <title>Remote Control - Open Source</title>
     <script defer src="/postHog.js"></script>
     <script defer src="/pages/openSource/script.js"></script>
