--- a/server/pages/reviews/index.html
+++ b/server/pages/reviews/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="See what our users say about Remote Control! Discover reviews of our advanced, easy-to-use, cross-platform remote desktop app from users around the world." />
   <title>Remote Control - Reviews</title>
   <script defer src="/postHog.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
