--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Meet the minds behind Remote Control, the advanced, cross-platform remote desktop solution. Learn about our team's commitment to accessible, secure remote access." />
     <title>Remote Control - About Us</title>
     <script defer src="/postHog.js"></script>
     <script defer src="/pages/team/script.js"></script>
