Render blocking Google Font fixed; Changed npm package version

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -9,8 +9,10 @@
     <script defer src="/pages/home/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&amp;family=Poppins:wght@300;400;500;600;700&amp;display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&amp;family=Poppins:wght@300;400;500;600;700&amp;display=swap"
+      media="print"
+      onload="this.media = 'all';"
     />
     <style>
       body {
