Added PWA support; Updated Express Docs; Changed npm package version

--- a/server/pages/admin/index.html
+++ b/server/pages/admin/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Manage your cross-platform remote desktop settings, permissions, and monitor sessions securely from one centralized interface." />
+    <meta name="theme-color" content="#000000" />
     <title>Remote Control - Admin</title>
     <script defer src="https://cdn.jsdelivr.net/npm/ace-builds@1.12.5/src/ace.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/ace-builds@1.12.5/src/theme-monokai.min.js"></script>
@@ -10,7 +13,14 @@
     <script defer src="/pages/admin/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap"
+      media="print"
+      onload="this.media = 'all';"
+    />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/assets/favicon.ico" />
     <style>
       body {
         margin: 0;
