--- a/server/pages/reviews/index.html
+++ b/server/pages/reviews/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="See what our users say about Remote Control! Discover reviews of our advanced, easy-to-use, cross-platform remote desktop app from users around the world." />
+  <meta name="theme-color" content="#000000" />
   <title>Remote Control - Reviews</title>
   <script defer src="/postHog.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="/pages/reviews/script.js"></script>
   <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="/assets/favicon.ico" />
 </head>
 <body style="overflow: hidden;">
   <div style="height: 100vh; max-width: 100vw;">
