--- a/server/pages/help/index.html
+++ b/server/pages/help/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Need help with Remote Control? Find answers to FAQs, troubleshooting tips, and support for seamless use of our cross-platform remote desktop solution." />
+  <meta name="theme-color" content="#000000" />
   <title>Remote Control - Help</title>
   <script defer src="/postHog.js"></script>
   <script defer src="/pages/help/script.js"></script>
   <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="/assets/favicon.ico" />
 </head>
 <body style="margin: 0; overflow: hidden;">
   <iframe id="markdownEmbed" title="Markdown Embed" style="width: 100vw; height: 100vh; border: none;" src="/pages/help/markdown/markdown.html" onerror></iframe>
