--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="An advanced but easy-to-use remote desktop application with cross-platform support. Access and manage devices securely from anywhere." />
+    <meta name="theme-color" content="#000000" />
     <title>Remote Control - Home</title>
     <script defer src="/postHog.js"></script>
     <script defer src="/pages/home/script.js"></script>
@@ -14,6 +16,8 @@
       media="print"
       onload="this.media = 'all';"
     />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/assets/favicon.ico" />
     <style>
       body {
         margin: 0;
