--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Meet the minds behind Remote Control, the advanced, cross-platform remote desktop solution. Learn about our team's commitment to accessible, secure remote access." />
+    <meta name="theme-color" content="#000000" />
     <title>Remote Control - About Us</title>
     <script defer src="/postHog.js"></script>
     <script defer src="/pages/team/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;family=Inter:wght@300;400;600&amp;display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;family=Inter:wght@300;400;600&amp;display=swap"
+      media="print"
+      onload="this.media = 'all';"
     />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/assets/favicon.ico" />
     <style>
       body {
         margin: 0;
