--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -121,7 +121,7 @@
         <img
           src="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/main/docs/static/logo.svg"
           alt="Logo"
-          style="width: 300px; margin-top: -13px; margin-left: 60px;"
+          style="width: 300px; height: 100%; margin-top: -13px; margin-left: 60px;"
         />
       </a>
       <a
