Rewrote PostHog Analytics Initialization Script; Renamed postHog.js to posthog.js (official name)

--- a/server/pages/help/index.html
+++ b/server/pages/help/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Need help with Remote Control? Find answers to FAQs, troubleshooting tips, and support for seamless use of our cross-platform remote desktop solution." />
   <meta name="theme-color" content="#000000" />
   <title>Remote Control - Help</title>
-  <script defer src="/postHog.js"></script>
+  <script defer src="/posthog.js"></script>
   <script defer src="/pages/help/script.js"></script>
   <link rel="icon" href="/assets/favicon.ico" />
   <link rel="manifest" href="/manifest.json" />
