--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="An advanced but easy-to-use remote desktop application with cross-platform support. Access and manage devices securely from anywhere." />
     <meta name="theme-color" content="#000000" />
     <title>Remote Control - Home</title>
-    <script defer src="/postHog.js"></script>
+    <script defer src="/posthog.js"></script>
     <script defer src="/pages/home/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <link
