--- a/server/pages/openSource/index.html
+++ b/server/pages/openSource/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Explore the open-source foundation of Remote Control, a cross-platform remote desktop app. Learn how transparency drives our secure, community-driven innovation." />
     <meta name="theme-color" content="#000000" />
     <title>Remote Control - Open Source</title>
-    <script defer src="/postHog.js"></script>
+    <script defer src="/posthog.js"></script>
     <script defer src="/pages/openSource/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
