--- a/server/pages/reviews/index.html
+++ b/server/pages/reviews/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="See what our users say about Remote Control! Discover reviews of our advanced, easy-to-use, cross-platform remote desktop app from users around the world." />
   <meta name="theme-color" content="#000000" />
   <title>Remote Control - Reviews</title>
-  <script defer src="/postHog.js"></script>
+  <script defer src="/posthog.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="/pages/reviews/script.js"></script>
   <link rel="icon" href="/assets/favicon.ico" />
