--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Meet the minds behind Remote Control, the advanced, cross-platform remote desktop solution. Learn about our team's commitment to accessible, secure remote access." />
     <meta name="theme-color" content="#000000" />
     <title>Remote Control - About Us</title>
-    <script defer src="/postHog.js"></script>
+    <script defer src="/posthog.js"></script>
     <script defer src="/pages/team/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
