Design fix; Updated todo list

--- a/server/pages/admin/index.html
+++ b/server/pages/admin/index.html
@@ -241,7 +241,7 @@
         <form id="adminLoginForm" method="POST" action="/api/v1/admin/login" style="margin-bottom: -15px;">
           <label for="adminPasswordInput">Admin Password</label>
           <input type="password" id="adminPasswordInput" name="password" required />
-          <button type="submit" style="margin-top: -2.5px;">Login</button>
+          <button type="submit" style="margin-top: -2.5px; margin-bottom: 10px;">Login</button>
         </form>
       </div>
     </div>
