Added admin portal as separate PWA

--- a/server/pages/admin/index.html
+++ b/server/pages/admin/index.html
@@ -19,7 +19,7 @@
       media="print"
       onload="this.media = 'all';"
     />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/adminManifest.json" />
     <link rel="apple-touch-icon" href="/assets/favicon.ico" />
     <style>
       body {
