Added default icon for missing app availability in script store

--- a/client/pages/scripts/index.html
+++ b/client/pages/scripts/index.html
@@ -268,7 +268,30 @@
         display: none;
         flex-direction: column;
         padding-bottom: 12.5px;
-      "></div>
+      ">
+        <div class="scriptIcon" style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 37.5px;
+          margin-bottom: 25px;
+        ">
+          <div style="
+            display: flex;
+            justify-content: center;
+            width: 8.75%;
+            aspect-ratio: 1/1;
+            border-radius: 15px;
+            background-color: #1de19e;
+          ">
+            <i class="fa fa-file-code-o" aria-hidden="true" style="
+              font-size: 3.675vw;
+              color: white;
+              margin: auto 0;
+            "></i>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
